refactor(intro): support i18n with kor translation & ci deploy script

--- a/projects/web/src/assets/i18n/ch.json
+++ b/projects/web/src/assets/i18n/ch.json
@@ -5,13 +5,28 @@
     "project-teaser": "Project Teaser",
     "whitepaper": "Whitepaper"
   },
+  "intro-navbar": {
+    "ecosystem": "Ecosystem",
+    "mzk-coins": "MZK Coin Usage",
+    "partners": "Partners",
+    "team": "Team",
+    "advisors": "Advisors",
+    "roadmap": "Roadmap",
+    "services": "Services"
+  },
   "intro-ecosystem": {
+    "title": "THE MUZIKA ECOSYSTEM",
     "subtitle-1": "Muzika's core concept is that of an autonomous, self-sustaining ecosystem driven by content creators (music artists) and their fans in tandem. Prior to the advent of blockchain technology in 2009 with the release of Bitcoin, such a revolutionary technology to drive evolution of the music industry remained out of the world's grasp.",
     "subtitle-2": "With the creation of a new decentralized digital music ecosystem where anyone can participate in the production, investment, consumption, and distribution cycle of the music industry, Muzika will realize its goal of revolution."
   },
   "intro-mzk-coins": {
     "subtitle-1": "Muzika coin(MZK) was deliberately designed as the backbone of this new ecosystem. The team has analyzed both successful and failed cryptocurrencies, past and present, and established a clear vision of what is necessary to make this project a success. ",
     "subtitle-2": "MZK will serve as the sole medium of exchange for all economic activity within the ecosystem, facilitating investments, trades, and the allocation of investment returns, all while assisting growth via a few free services targeted at community novices."
+  },
+  "intro-leadership": {
+    "subtitle-1": "Co-founders are one of the youngest and most successful entrepreneurs in South Korea startup history, averagely aged at 22.",
+    "subtitle-2": "All of them were awarded Forbes 30 Under 30 Asia 2018.",
+    "co-founders": "Co-Founder"
   },
   "intro-business": {
     "subtitle": "Global No. 1 Instrumental Music Platform ",
