--- a/projects/web/src/assets/i18n/ko.json
+++ b/projects/web/src/assets/i18n/ko.json
@@ -1,7 +1,7 @@
 {
   "intro-main": {
-    "home-subtitle-1": "Revolution and Redemption of Digital Music World",
-    "home-subtitle-2": "through a decentralized blockchain-based ecosystem.",
+    "home-subtitle-1": "분산화된 블록체인 기반 생태계를 토대로",
+    "home-subtitle-2": "디지털 음악 산업의 새로운 패러다임을 제시합니다.",
     "project-teaser": "프로젝트 티저",
     "whitepaper": "백서"
   },
@@ -34,23 +34,23 @@
     "user-nations": "서비스되는 국가의 수",
     "users": "사용자",
     "artists": "아티스트",
-    "what-makes-muzika-unique": "What makes Muzika unique",
+    "what-makes-muzika-unique": "Muzika가 특별한 이유",
     "highlight-text-1": "Muzika는 실행가능성이 담보되지 않는 수많은 ICO 프로젝트들과 다릅니다. 우리의 생태계는 수익을 창출하는, 많은 민간투자자들과 대한민국 정부로부터 투자받은 플랫폼 비즈니스를 바탕으로 구성됩니다. 전세계 170개국 이상에서 2,000,000명의 이용자와 17,000명 이상의 아티스트들이 우리의 플랫폼을 사용하고 있습니다. ",
     "highlight-text-2": "다년간의 경험을 토대로, 우리는 또한 어떻게 하면 충성도가 높은 커뮤니티 이용자들을 확보하고 그들에게 인센티브를 제공할 수 있는지를 명확히 배워왔습니다. 그리고 이러한 능력은 커뮤니티를 기반으로 한 ICO 프로젝트의 성공에 매우 중요한 역할을 할 것입니다. "
   },
   "intro-footer": {
-    "whitepapers": "Whitepapers",
-    "advisors": "Advisors",
-    "teams": "Teams",
-    "roadmap": "Roadmap",
-    "services": "Services",
+    "whitepapers": "백서",
+    "advisors": "어드바이저",
+    "teams": "팀",
+    "roadmap": "로드맵",
+    "services": "서비스 (Beta)",
 
-    "community": "Community",
+    "community": "커뮤니티",
     "medium": "Medium",
     "twitter": "Twitter",
     "telegram": "Telegram",
     "telegram-kr": "Telegram (KOR)",
 
-    "websites": "Websites"
+    "websites": "웹사이트"
   }
 }
