feat(mzk-coins): support 4 major functions with translation

--- a/projects/web/src/assets/i18n/ko.json
+++ b/projects/web/src/assets/i18n/ko.json
@@ -21,7 +21,20 @@
   },
   "intro-mzk-coins": {
     "subtitle-1": "Muzika 코인(MZK)은 새로운 Muzika 생태계에서 중추적인 역할을 담당할 것입니다. 우리는 과거와 현재의 수많은 가상화폐들의 성공과 실패 사례들을 분석하였고, 프로젝트를 성공으로 이끌기 위한 요소들에 대해 뚜렷한 시각을 얻을 수 있었습니다.",
-    "subtitle-2": "MZK는 Muzika 생태계 내 모든 경제활동의 유일한 수단으로써 기능할 것입니다. 생태계에 처음 발을 들인 구성원을 위한 일부 서비스를 제외하고, 팬들이 아티스트에게 투자하고, 커뮤니티에서 음악을 구매하고, 아티스트로부터 수익을 분배받는 등 생태계 내 거의 대부분의 활동에서 MZK가 사용될 것입니다.  "
+    "subtitle-2": "MZK는 Muzika 생태계 내 모든 경제활동의 유일한 수단으로써 기능할 것입니다. 생태계에 처음 발을 들인 구성원을 위한 일부 서비스를 제외하고, 팬들이 아티스트에게 투자하고, 커뮤니티에서 음악을 구매하고, 아티스트로부터 수익을 분배받는 등 생태계 내 거의 대부분의 활동에서 MZK가 사용될 것입니다.  ",
+    "major-functions": "4 MAJOR FUNCTIONS",
+    "func-1-title": "Community Building",
+    "func-1-desc-1": "In order to be truly self-sustaining, the Muzika ecosystem will contain all of the necessary activities.",
+    "func-1-desc-2": "These range from creative brainstorming, crowd-funding, the exchange of feedback, and more.",
+    "func-2-title": "Commercial Items",
+    "func-2-desc-1": "Besides community involvement, the ecosystem will also incorporate all of the functions that make the traditional digital music industry otherwise successful.",
+    "func-2-desc-2": "Streaming services, a sheet music marketplace, musical instruments, recording services and much more will all be available through Muzika.",
+    "func-3-title": "Investment and rewards",
+    "func-3-desc-1": "Users may invest in artists much like they might a stock in worldly capital markets, or rather lend to a musician to fund their project, much in the same way a loanholder might lend to a government or corporation.",
+    "func-3-desc-2": "And just as with those more traditional modes of investment, investors in the Muzika ecosystem will collect dividends and/or interest according to their investment choices.",
+    "func-4-title": "Community-wide Programs",
+    "func-4-desc-1": "The real bread and butter of the Muzika ecosystem will be the spirit of creativity.",
+    "func-4-desc-2": "Community programs and events such as auditions, contests, crowd-funding drives, live-streaming events, and other such activities driven by member involvement will be a focal point of Muzika."
   },
   "intro-leadership": {
     "subtitle-1": "한국 역사상 평균 나이 22세로 가장 어린 성공한 사업가들",
