--- a/projects/web/src/assets/i18n/ch.json
+++ b/projects/web/src/assets/i18n/ch.json
@@ -21,7 +21,20 @@
   },
   "intro-mzk-coins": {
     "subtitle-1": "Muzika coin(MZK) was deliberately designed as the backbone of this new ecosystem. The team has analyzed both successful and failed cryptocurrencies, past and present, and established a clear vision of what is necessary to make this project a success. ",
-    "subtitle-2": "MZK will serve as the sole medium of exchange for all economic activity within the ecosystem, facilitating investments, trades, and the allocation of investment returns, all while assisting growth via a few free services targeted at community novices."
+    "subtitle-2": "MZK will serve as the sole medium of exchange for all economic activity within the ecosystem, facilitating investments, trades, and the allocation of investment returns, all while assisting growth via a few free services targeted at community novices.",
+    "major-functions": "4 MAJOR FUNCTIONS",
+    "func-1-title": "Community Building",
+    "func-1-desc-1": "In order to be truly self-sustaining, the Muzika ecosystem will contain all of the necessary activities.",
+    "func-1-desc-2": "These range from creative brainstorming, crowd-funding, the exchange of feedback, and more.",
+    "func-2-title": "Commercial Items",
+    "func-2-desc-1": "Besides community involvement, the ecosystem will also incorporate all of the functions that make the traditional digital music industry otherwise successful.",
+    "func-2-desc-2": "Streaming services, a sheet music marketplace, musical instruments, recording services and much more will all be available through Muzika.",
+    "func-3-title": "Investment and rewards",
+    "func-3-desc-1": "Users may invest in artists much like they might a stock in worldly capital markets, or rather lend to a musician to fund their project, much in the same way a loanholder might lend to a government or corporation.",
+    "func-3-desc-2": "And just as with those more traditional modes of investment, investors in the Muzika ecosystem will collect dividends and/or interest according to their investment choices.",
+    "func-4-title": "Community-wide Programs",
+    "func-4-desc-1": "The real bread and butter of the Muzika ecosystem will be the spirit of creativity.",
+    "func-4-desc-2": "Community programs and events such as auditions, contests, crowd-funding drives, live-streaming events, and other such activities driven by member involvement will be a focal point of Muzika."
   },
   "intro-leadership": {
     "subtitle-1": "Co-founders are one of the youngest and most successful entrepreneurs in South Korea startup history, averagely aged at 22.",
