--- a/projects/web/src/assets/i18n/en.json
+++ b/projects/web/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
   },
   "intro-navbar": {
     "ecosystem": "Ecosystem",
-    "mzk-coins": "MZK Coin Usage",
+    "mzk-coins": "MZK Coin",
     "partners": "Partners",
     "team": "Team",
     "advisors": "Advisors",
