feat(i18n/zh): translate whole sentences to chinese in 中文 fix(IE): support IE 10, IE 11 browser

--- a/projects/web/src/assets/i18n/en.json
+++ b/projects/web/src/assets/i18n/en.json
@@ -51,6 +51,10 @@
     "highlight-text-1": "Unlike hundreds of ICOs without proof of practicality, Muzika is not starting from scratch. The token economy is strongly built on the backs of our existing, profit-generating, and privately & publicly funded business with 2,000,000 active users & subscribers from 170+ nations and artists from 30+ nations. ",
     "highlight-text-2": "Through years of experience, we have learned the precise ways to build a community run by loyal and incentivized individuals: a key to success of any community-based ICO projects."
   },
+  "intro-roadmap": {
+    "title": "ROADMAP",
+    "subtitle": "Our revolutionary journey has just begun"
+  },
   "intro-footer": {
     "whitepapers": "Whitepapers",
     "advisors": "Advisors",
