fix(mzk-coins): images sequence change to correct-way

--- a/projects/web/src/assets/i18n/ko.json
+++ b/projects/web/src/assets/i18n/ko.json
@@ -53,7 +53,7 @@
   },
   "intro-roadmap": {
     "title": "ROADMAP",
-    "subtitle": "Our revolutionary journey has just begun"
+    "subtitle": "음악 시장에서의 혁신은 이제 시작입니다"
   },
   "intro-footer": {
     "whitepapers": "백서",
