refactor(leadership): translate 'Awards'

--- a/projects/web/src/assets/i18n/en.json
+++ b/projects/web/src/assets/i18n/en.json
@@ -39,7 +39,8 @@
   "intro-leadership": {
     "subtitle-1": "Co-founders are one of the youngest and most successful entrepreneurs in South Korea startup history, averagely aged at 22.",
     "subtitle-2": "All of them were awarded Forbes 30 Under 30 Asia 2018.",
-    "co-founders": "Co-Founder"
+    "co-founders": "Co-Founder",
+    "awards": "Awards"
   },
   "intro-business": {
     "subtitle": "Global No. 1 Instrumental Music Platform ",
