--- a/projects/web/src/assets/i18n/ko.json
+++ b/projects/web/src/assets/i18n/ko.json
@@ -39,7 +39,8 @@
   "intro-leadership": {
     "subtitle-1": "한국 역사상 평균 나이 22세로 가장 어린 성공한 사업가들",
     "subtitle-2": "2018 포브스가 선정한 30세 이하 가장 영향력 있는 30인에 선정.",
-    "co-founders": "공동창업자"
+    "co-founders": "공동창업자",
+    "awards": "수상 경력"
   },
   "intro-business": {
     "subtitle": "Global No. 1 Instrumental Music Platform ",
