--- a/projects/web/src/assets/i18n/zh.json
+++ b/projects/web/src/assets/i18n/zh.json
@@ -39,7 +39,8 @@
   "intro-leadership": {
     "subtitle-1": "公司联合创始人是韩国创业史上最年轻有为且最成功的创业团队之一，联合创始人的平均年龄在22岁。.",
     "subtitle-2": "并且，三位联合创始人都荣登 福布斯 “2018亚洲30位30岁以下精英榜。”",
-    "co-founders": "联合创始人"
+    "co-founders": "联合创始人",
+    "awards": "殊荣奖项"
   },
   "intro-business": {
     "subtitle": "全球第一的乐器音乐平台 ",
