chore: zh translation change in intro-main

--- a/projects/web/src/assets/i18n/zh.json
+++ b/projects/web/src/assets/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "intro-main": {
-    "home-subtitle-1": "分散式区块链基础生态系统",
+    "home-subtitle-1": "分布式区块链基础生态系统Revolution and Redemption of Digital Music World",
     "home-subtitle-2": "数字音乐世界的革命与未来",
     "project-teaser": "项目简报",
     "whitepaper": "白皮书"
