refactor(i18n): some typo fix

--- a/projects/web/src/assets/i18n/zh.json
+++ b/projects/web/src/assets/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "intro-main": {
-    "home-subtitle-1": "分布式区块链基础生态系统Revolution and Redemption of Digital Music World",
+    "home-subtitle-1": "分布式区块链基础生态系统",
     "home-subtitle-2": "数字音乐世界的革命与未来",
     "project-teaser": "项目简报",
     "whitepaper": "白皮书"
@@ -49,7 +49,7 @@
     "users": "用户",
     "artists": "音乐艺人",
     "what-makes-muzika-unique": "MUZIKA 真的与众不同吗？",
-    "highlight-text-1": "目前，市面上大部分的ICO项目面对缺乏应用场景的“瓶颈”挑战，且缺乏实用性的证据，但 muzika却不是这样。我们的区块链项目不是从零基础凭空而幻想出来的，我们所设计的代币经济体制是建立在我们现有的，创造经济价值的，得到私人与公共机构投资的实业基础上的。到目前为止，我们拥有跨越170多个国家的200万的活跃用户与粉丝，各类音乐艺人来自30多个国家和地区。 ",
+    "highlight-text-1": "目前，市面上大部分的区块链项目面对缺乏应用场景的“瓶颈”挑战，且缺乏实用性的证据，但 muzika却不是这样。我们的区块链项目不是从零基础凭空而幻想出来的，我们所设计的代币经济体制是建立在我们现有的，创造经济价值的，得到私人与公共机构投资的实业基础上的。到目前为止，我们拥有跨越170多个国家的200万的活跃用户与粉丝，各类音乐艺人来自30多个国家和地区。 ",
     "highlight-text-2": "多年的业界经验教会了我们懂得如何建立与运营一个用户忠实度高，对奖励制度反馈度高的网络用户社区，我们相信这也是区块链项目具备成功的一个重要因素。"
   },
   "intro-roadmap": {
