refactor(prototype): support prototype module with lazy loading

--- a/projects/web/src/assets/i18n/en.json
+++ b/projects/web/src/assets/i18n/en.json
@@ -61,7 +61,7 @@
     "advisors": "Advisors",
     "teams": "Teams",
     "roadmap": "Roadmap",
-    "services": "Services",
+    "services": "Service (Alpha)",
 
     "community": "Community",
     "medium": "Medium",
