--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -3,7 +3,8 @@
     "home-subtitle-1": "分布式区块链基础生态系统",
     "home-subtitle-2": "数字音乐世界的革命与未来",
     "project-teaser": "项目简报",
-    "whitepaper": "白皮书"
+    "whitepaper": "白皮书",
+    "airdrop-btn-text": "Bounty Program"
   },
   "intro-navbar": {
     "ecosystem": "生态系统",
@@ -66,7 +67,8 @@
     "community": "社群",
     "medium": "Medium",
     "twitter": "Twitter",
-    "telegram": "Telegram",
+    "telegram-en": "Telegram (ENG)",
+    "telegram-zh": "Telegram (CHN)",
     "telegram-kr": "Telegram (KOR)",
 
     "websites": "语言选择"
