fix(intro): display error message if ethereum address is not valid

--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -124,7 +124,8 @@
       "api": {
         "already-submitted": "You already submit your Ethereum address",
         "confirm-message": "Are you sure that this is the correct wallet address?\nYou cannot change the address after you make confirmation.",
-        "network-error": "Due to instability in network or lack of security in your browser, we cannot save your wallet address. We are sorry for your discorfort, but please use other devices to apply for the bounty program."
+        "network-error": "Due to instability in network or lack of security in your browser, we cannot save your wallet address. We are sorry for your discorfort, but please use other devices to apply for the bounty program.",
+        "invalid-address": "Please check your Ethereum address is correct."
       }
     }
   }
