--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -124,7 +124,8 @@
       "api": {
         "already-submitted": "이미 지갑 주소를 입력하셨습니다.",
         "confirm-message": "정말 이 지갑 주소가 맞나요? \n한번 입력되면 변경할 수 없습니다.",
-        "network-error": "네트워크가 불안정하거나 회원님의 브라우저 보안이 불안정하여 이더리움 지갑 주소를 저장할 수 없습니다. 번거로우시겠지만 다른 컴퓨터/기기를 통해 이용 부탁드립니다."
+        "network-error": "네트워크가 불안정하거나 회원님의 브라우저 보안이 불안정하여 이더리움 지갑 주소를 저장할 수 없습니다. 번거로우시겠지만 다른 컴퓨터/기기를 통해 이용 부탁드립니다.",
+        "invalid-address": "주소가 없거나 잘못된 지갑 주소입니다. 지갑 주소를 확인해주세요."
       }
     }
   }
