--- a/projects/intro/src/assets/i18n/en.json
+++ b/projects/intro/src/assets/i18n/en.json
@@ -127,6 +127,11 @@
         "network-error": "Due to instability in network or lack of security in your browser, we cannot save your wallet address. We are sorry for your discorfort, but please use other devices to apply for the bounty program.",
         "invalid-address": "Please check your Ethereum address is correct."
       }
+    },
+    "end-event": {
+      "title": "The bounty program has ended",
+      "content-1": "We are sorry to announce that we have distributed all the designated tokens to 25,000 individuals. For additional information and follow-up schedules, stay connected us in the telegram group.",
+      "content-2": "Thank you very much."
     }
   }
 }
