--- a/projects/intro/src/assets/i18n/ko.json
+++ b/projects/intro/src/assets/i18n/ko.json
@@ -127,6 +127,11 @@
         "network-error": "네트워크가 불안정하거나 회원님의 브라우저 보안이 불안정하여 이더리움 지갑 주소를 저장할 수 없습니다. 번거로우시겠지만 다른 컴퓨터/기기를 통해 이용 부탁드립니다.",
         "invalid-address": "주소가 없거나 잘못된 지갑 주소입니다. 지갑 주소를 확인해주세요."
       }
+    },
+    "end-event": {
+      "title": "Muzika 에어드롭 이벤트가 마감되었습니다",
+      "content-1": "Muzika 에어드롭 참여자가 총 25,000명을 달성하여 이벤트가 마감되었습니다.",
+      "content-2": "추후 Muzika의 소식과 일정은 텔레그램에서 확인하실 수 있습니다."
     }
   }
 }
