--- a/projects/intro/src/assets/i18n/zh.json
+++ b/projects/intro/src/assets/i18n/zh.json
@@ -124,9 +124,14 @@
       "api": {
         "already-submitted": "以太坊钱包地址提交成功",
         "confirm-message": "请确认您的以太坊钱包地址，一旦提交，您将无法更该信息",
-        "network-error": "由于网络不稳定或您的浏览器欠缺安全性，您的钱包地址显示出现故障，给您带来的不便，我们深感歉意，请您更换设备再从新试一次。.",
-        "invalid-address": "Please check your Ethereum address is correct."
+        "network-error": "由于网络不稳定或您的浏览器欠缺安全性，您的钱包地址显示出现故障，给您带来的不便，我们深感歉意，请您更换设备再从新试一次。",
+        "invalid-address": "请确认您的以太坊地址是否正确"
       }
+    },
+    "end-event": {
+      "title": "MZK赏金计划项目已结束",
+      "content-1": "空投糖果仅有25,000名额，我们很遗憾地公布所有空投名额已满员。若您想要了解我们项目未来的最新动态与消息，请通过我们的官方电报群与我们保持联系。",
+      "content-2": "MZK团队向您表达由衷的感谢"
     }
   }
 }
